private/src/styles/pages/page/type/_tunnel-clh.scss
/* ... */
.tunnel-clh-petition-accordion-content {
  max-height: 0;
  overflow: hidden;
  transition: max-height 0.3s ease-out;
  background-color: #f1f1f1;
}

.page-tunnel-clh-petition-card-context-content {
  padding: 15px;
  margin: 0;

  > :last-child {
    margin-bottom: 0;
  }
}

.page-tunnel-clh-petition-card-anonymous {
  grid-column: 1 / -1;
  border-bottom: none;
  padding: 28px 24px;

  @media screen and (max-width: $container-lg) {
    padding: 20px;
  }

  .email-section > .email-input {
    border: 1px solid var(--wp--preset--color--grey-light);
    font-size: var(--wp--preset--font-size--medium);
    text-transform: none;
    margin-bottom: 18px;

    &::placeholder {
      font-family: var(--wp--preset--font-family--primary);
      color: var(--wp--preset--color--grey-dark);
      font-size: 18px;
      font-weight: 300;
      line-height: 28px;
      text-transform: capitalize;
    }
  }

  .full-form {
    display: none;
    flex-direction: column;
    gap: 18px;
    margin-bottom: 18px;

    .civility-section {
      display: flex;
      align-items: center;
      flex-direction: row;
      gap: 18px;

      .civility-label {
        color: var(--wp--preset--color--grey-dark);
        font-family: var(--wp--preset--font-family--primary);
        font-size: 18px;
        font-weight: 300;
        line-height: 28px;
        text-transform: capitalize;
      }

      .civilities {
        display: flex;
        align-items: center;
        gap: 18px;

        @media screen and (max-width: $container-lg) {
          gap: 0;
          justify-content: space-between;
        }

        input {
          border: 1px solid var(--wp--preset--color--grey-dark);
          height: auto;
          padding: 0;
        }

        input[type='radio'] {
          position: absolute;
          opacity: 0;
          pointer-events: none;
        }

        label {
          position: relative;
          padding-left: 25px;
          cursor: pointer;
          display: inline-flex;
          align-items: center;
          font-family: var(--wp--preset--font-family--primary);
          font-weight: 300;
          font-size: 18px;
          text-transform: capitalize;
          color: var(--wp--preset--color--grey-dark);
        }

        label::before {
          content: '';
          position: absolute;
          left: 0;
          top: 50%;
          transform: translateY(-50%);
          width: 18px;
          height: 18px;
          border: 2px solid var(--wp--preset--color--grey-dark);
          border-radius: 50%;
          background: var(--wp--preset--color--white);
          box-sizing: border-box;
        }

        input[type='radio']:checked + label::after {
          content: '';
          position: absolute;
          left: 4px;
          top: 50%;
          transform: translateY(-50%);
          width: 10px;
          height: 10px;
          background: var(--wp--preset--color--black);
          border-radius: 50%;
        }
      }
    }

    .firstname-section,
    .lastname-section,
    .phone-section {
      .firstname-input,
      .lastname-input,
      .phone-input {
        border: 1px solid var(--wp--preset--color--grey-light);

        &::placeholder {
          font-family: var(--wp--preset--font-family--primary);
          color: var(--wp--preset--color--grey-dark);
          font-size: 18px;
          font-weight: 300;
          line-height: 28px;
          text-transform: capitalize;
        }
      }
    }

    .zipcode-and-country {
      display: flex;
      gap: 18px;

      .zipcode-section {
        width: 50%;

        .zipcode-input {
          border: 1px solid var(--wp--preset--color--grey-light);

          &::placeholder {
            font-family: var(--wp--preset--font-family--primary);
            color: var(--wp--preset--color--grey-dark);
            font-size: 18px;
            font-weight: 300;
            line-height: 28px;
            text-transform: capitalize;
          }
        }
      }

      .country-section {
        width: 50%;

        .country-input {
          padding: 0 12px;
          height: 100%;
          width: 100%;
          border: 1px solid var(--wp--preset--color--grey-light);
          color: var(--wp--preset--color--grey-dark);
          font-family: var(--wp--preset--font-family--secondary);
          font-size: var(--wp--preset--font-size--small);
          font-weight: bold;
          text-transform: capitalize;
        }
      }
    }
  }

  .page-tunnel-clh-petition-actions {
    justify-content: space-evenly;
  }
}


.page-tunnel-clh-petition-actions {
  display: flex;
  flex-direction: column;
  gap: 8px;
  align-items: stretch;

  > .email-input {
    border: 1px solid var(--wp--preset--color--grey-light);
    font-size: var(--wp--preset--font-size--medium);
    text-transform: none;
  }

  @media screen and (max-width: ($container-lg - 1px)) {
    .page-tunnel-clh-action-button.is-primary {
      display: none;
    }
  }

  @media (max-width: ($container-sm - 1px)) {
    gap: 0;
    margin: 0 -20px 0;

    .page-tunnel-clh-action-button.is-primary {
      order: 1;
    }

    .page-tunnel-clh-action-button.is-secondary {
      order: 2;
      font-family: var(--wp--preset--font-family--primary);
    }
  }

  @media (min-width: $container-sm) {
    flex-direction: row;
  }

  @media (min-width: $container-lg) {
    flex-direction: row-reverse;
    justify-content: space-between;
    align-items: flex-end;
    margin-top: auto;
  }
}
/* ... */

